--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack-loaders",
   "version": "1.0.0",
   "description": "some simple webpack loaders for study",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "dev": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
